src/index.css
@import "tailwindcss";

@font-face {
  font-family: Rubik;
  src: url("assets/fonts/Rubik.ttf") format("truetype-variations");
}

@font-face {
  font-family: PixelifySans;
  src: url("assets/fonts/PixelifySans.ttf") format("truetype-variations");
}

@theme {
  --font-rubik: "Rubik";
  --font-pixelify: "PixelifySans";

  --animate-flip-coin: flip-coin 1s forwards;
  --animate-unflip-coin: unflip-coin 1s forwards;

  @keyframes flip-coin {
    from {
      transform: rotateY(0deg);
      content: url("/src/assets/images/tails.png");
    }
    to {
      transform: rotateY(180deg);
      content: url("/src/assets/images/heads.png");
    }
  }

  @keyframes unflip-coin {
    from {
      transform: rotateY(180deg);
      content: url("/src/assets/images/heads.png");
    }
    to {
      transform: rotateY(0deg);
      content: url("/src/assets/images/tails.png");
    }
  }
}

@layer components {
  #root {
    @apply w-screen;
    @apply h-screen;

    @apply font-rubik;

    @apply bg-[url('/src/assets/images/gradient.png')];
    @apply bg-cover;
    @apply bg-right;
  }
}

